--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,76 @@
     height:50vh;
 }
 
+
+
+
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /*background-color:rgba(224,224,224,0.4);*/
+    color: rgba(64,64,64,0.9);
+}
+
+
+.logo_area {
+    width: 300px;
+    height: 100px;
+    margin: 0 auto;
+    background-image: url("../images/logo.jpg");
+    background-size: cover;
+}
+
+.header_area {
+    margin: 0 auto;
+    /*height:100px;*/
+    width: 80%;
+    background-size: cover;
+    /*background-image:url("../images/mountain.jpg");*/
+}
+
+.btn_area {
+    margin: 0 auto;
+    text-align: center;
+    width: 80%;
+    border-bottom: solid 1px;
+}
+
+    .btn_area .btn {
+        margin: 10px;
+        text-align: center;
+        width: 100px;
+        height: 40px;
+        border-radius: 3px;
+        border-style: none;
+        /*background-color:rgba(96,96,96,0.5);*/
+        background-color: rgba(234,234,234,0.5);
+        display: inline-block;
+        position: relative;
+    }
+
+.btn::after {
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: rgba(22,22,14,0.8);
+    transform: scale(0,1);
+    transform-origin: right top;
+    transition: transform 0.5s;
+}
+
+.btn:hover {
+    transition: all 0.5s;
+    background-color: rgba(234,234,234,0.8);
+}
+
+    .btn:hover::after {
+        transform: scale(1,1);
+    }
+
+.btn_area p::first-letter {
+    color: red;
+    font-size: 18px;
+    color: rgba(22,22,14,1);
+}
